--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,5 +1,23 @@
 @import './fonts';
 
+// fontawesome
+@import './../node_modules/@fortawesome/fontawesome-free/scss/fontawesome.scss';
+@import './../node_modules/@fortawesome/fontawesome-free/scss/brands.scss';
+@import './../node_modules/@fortawesome/fontawesome-free/scss/regular.scss';
+@import './../node_modules/@fortawesome/fontawesome-free/scss/solid.scss';
+
+//bootstrap
+@import './../node_modules/bootstrap/scss/bootstrap-reboot.scss';
+@import './../node_modules/bootstrap/scss/bootstrap-grid.scss';
+@import './../node_modules/bootstrap/scss/bootstrap-utilities.scss';
+// @import './../node_modules/bootstrap/scss/images';
+
+@import 'variables';
+@import 'reset';
+
+@import './shared/index';
+
 body {
   font-family: 'Roboto', 'sans-serif';
+  color: $gray-primary;
 }
