--- a/styles/shared/ui/_badges.scss
+++ b/styles/shared/ui/_badges.scss
@@ -2,22 +2,20 @@
   display: inline-flex;
   width: 60px;
   height: 60px;
-  background-color: $brand-primary;
-  color: white;
+  background: $brand-primary;
+  color: $white;
   justify-content: center;
   align-items: center;
   text-align: center;
-  font-size:14px;
-  line-height:20px;
-  border-radius:50%;
+  font-size: 14px;
+  line-height: 20px;
+  border-radius: 50%;
 
   &-font-large {
-    font-size:24px;
+    font-size: 24px;
   }
 
   &-secondary {
     background-color: $brand-secondary;
   }
 }
-
-
